fixed reset table vertical-align issue, fixed IE7 wrong wrapping of code elements.

--- a/blueprint/ie.css
+++ b/blueprint/ie.css
@@ -17,3 +17,4 @@ legend { margin-bottom:1.4em; }
 ol { margin-left:2em; }
 sup { vertical-align:text-top; }
 sub { vertical-align:text-bottom; }
+html>body p code { *white-space:normal; }
