--- a/blueprint/src/reset.css
+++ b/blueprint/src/reset.css
@@ -21,7 +21,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-style: inherit;
 	font-size: 100%;
 	font-family: inherit;
-	vertical-align: baseline;
+	vertical-align: middle;
 }
 
 body { 
